<resources>
    <string name="app_name">NewIMEntrance</string>

    <!--로그인-->
    <string name="login_textView_text">환영합니다!(KST)</string>
    <string name="login_id_editText_text">로그인</string>
    <string name="login_pw_editText_text">비밀번호</string>
    <string name="login_button_text">로그인</string>

    <!--홈뷰-->
    <string name="home_view_logout_button_text">로그아웃</string>
    <string name="home_view_heat_history_button_text">아동체온기록</string>
    <string name="home_view_title_textView_text">등하원 체크</string>
    <string name="home_view_nfc_off_textView_text">리더기 OFF</string>
    <string name="home_view_nfc_on_textView_text">리더기 ON</string>
    <string name="home_view_nfc_searching_meant_text">NFC카드 리더기를 찾는 중 입니다. 잠시만 기다려 주세요…</string>
    <string name="home_view_nfc_pairing_meant_text">NFC카드 리더기와 블루투스 연결 중 입니다. 잠시만 기다려 주세요…</string>

</resources>