<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:background="@color/white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mainNavigationHostContainer"
        app:layout_constraintHeight_percent="0.115">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/testBackButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/home_view_logout_button_text"
                style="@style/HomeViewButtonTextStyle"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                android:drawablePadding="-30dp"
                android:drawableStart="@drawable/ic_baseline_login_24"
                android:background="@drawable/home_view_toolbar_button_background"
                android:layout_marginStart="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.14"
                app:layout_constraintHeight_percent="0.7"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/nfcReaderConnect"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/home_view_nfc_off_textView_text"
                style="@style/HomeViewNfcTextStyle"
                android:background="@drawable/home_view_nfc_red_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/titleTextView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintDimensionRatio="3:1"/>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/home_view_title_textView_text"
                style="@style/HomeViewTitleTextStyle"
                android:gravity="center"
                android:lines="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.1"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/ic_baseline_sync_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.5"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHorizontal_bias="0.05"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/testButton2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/home_view_heat_history_button_text"
                style="@style/HomeViewButtonTextStyle"
                android:paddingStart="0dp"
                android:paddingEnd="20dp"
                android:drawablePadding="-20dp"
                android:drawableEnd="@drawable/ic_baseline_arrow_forward_24"
                android:background="@drawable/home_view_toolbar_button_background"
                android:layout_marginEnd="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.14"
                app:layout_constraintHeight_percent="0.7"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mainNavigationHostContainer"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:navGraph="@navigation/navigation_main"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/disableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#90707070"
        android:elevation="10dp">
        <ProgressBar
            android:id="@+id/progressCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/messageTextView"/>

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            style="@style/LoadingTextViewTextStyle"
            app:layout_constraintTop_toBottomOf="@id/progressCircle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_percent="0.1"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>